# haskell-monad-http

./: .travis.meta.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  monad-http.cabal  package.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-nightly.yaml
src/Control/Monad/: Caching.hs  Http.hs
src/Control/Monad/Caching/: ResponseMeta.hs
src/Control/Monad/Http/: Class.hs  Operational.hs
src/Control/Monad/Trans/: Http.hs
test/: Tests.hs
